[project]
name = "loan-approval"
version = "0.1.0"
description = ""
authors = [
    {name = "medvedev.r"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.5.3,<8.0.0)",
    "polars (>=1.37.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "multipledispatch (>=1.0.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "optuna (>=4.7.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
